--- a/styles.css
+++ b/styles.css
@@ -26,3 +26,16 @@ body {
 .paddle.right {
   right: 1vw;
 }
+
+.ball {
+  --x: 50;
+  --y: 50;
+  position: absolute;
+  background-color: var(--foreground-color);
+  left: calc(var(--x) * 1vh);
+  top: calc(var(--y) * 1vh);
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  width: 2.5vh;
+  height: 2.5vh;
+}
