--- a/styles.css
+++ b/styles.css
@@ -32,10 +32,18 @@ body {
   --y: 50;
   position: absolute;
   background-color: var(--foreground-color);
-  left: calc(var(--x) * 1vh);
+  left: calc(var(--x) * 1vw);
   top: calc(var(--y) * 1vh);
   border-radius: 50%;
   transform: translate(-50%, -50%);
   width: 2.5vh;
   height: 2.5vh;
+}
+
+.score {
+  display: flex;
+  justify-content: center;
+  font-weight: bold;
+  font-size: 7vh;
+  color: var(--foreground-color);
 }
