--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,17 @@ body {
   overflow: hidden;
 }
 
-.difficulty-text {
+.difficulty-text,
+.play-again-button {
   font-family: "Press Start 2P", system-ui;
   color: #fac650;
   font-size: 25px;
   margin-bottom: 15px;
+}
+
+.play-again-button {
+  padding: 25px 20px 25px 20px;
+  background-color: #111822;
 }
 
 .difficulty-button,
@@ -28,7 +34,8 @@ body {
   margin-right: 10px;
 }
 
-.start-modal {
+.start-modal,
+.end-modal {
   text-align: center;
   background-color: #2c3d55;
   border-radius: 20px;
@@ -36,7 +43,8 @@ body {
   padding: 25px 20px 25px 20px;
 }
 
-.start-modal::backdrop {
+.start-modal::backdrop,
+.end-modal::backdrop {
   background-color: #101216;
   opacity: 0.9;
 }
